crates/forge_services/src/tools/snapshots/forge_services__tools__shell__tests__format_output_multiline_no_trailing_newline.snap
---
source: crates/forge_services/src/tools/shell.rs
expression: actual
---
---
command: no trailing newline
exit_code: 0
---
<stdout>
line1
line2
line3
</stdout>
