crates/forge_services/src/tools/snapshots/forge_services__tools__shell__tests__format_output_multiline_stderr.snap
---
source: crates/forge_services/src/tools/shell.rs
expression: actual
---
---
command: test command
exit_code: 0
---
<stderr>
error line 1
error line 2
error line 3
</stderr>
