crates/forge_services/src/tools/snapshots/forge_services__tools__shell__tests__format_output_no_truncation.snap
---
source: crates/forge_services/src/tools/shell.rs
expression: "TempDir::normalize(&large_result)"
---
---
command: echo
exit_code: 0
---
<stdout>
ABCDEFGHIJKLMNOPQRSTUVWXYZ
</stdout>
