crates/forge_services/src/tools/snapshots/forge_services__tools__shell__tests__format_output_small_truncation.snap
---
source: crates/forge_services/src/tools/shell.rs
expression: "TempDir::normalize(&small_result)"
snapshot_kind: text
---
---
command: echo
exit_code: 0
---
<stdout>
ABCDEFGHIJKLMNOPQRSTUVWXYZ
</stdout>
