crates/forge_services/src/tools/snapshots/forge_services__tools__shell__tests__format_output_stdout_only_truncation.snap
---
source: crates/forge_services/src/tools/shell.rs
expression: "TempDir::normalize(&actual)"
---
---
command: stdout truncation test
exit_code: 0
total_stdout_lines: 15
temp_file: [TEMP_DIR]
truncated: true
---
<stdout lines="1-3">
stdout line 1
stdout line 2
stdout line 3
</stdout>
<truncated>...stdout truncated (9 lines not shown)...</truncated>
<stdout lines="13-15">
stdout line 13
stdout line 14
stdout line 15
</stdout>

<stderr>
error line 1
error line 2
</stderr>
<truncated>content is truncated, remaining content can be read from path:[TEMP_DIR]</truncated>
