crates/forge_services/src/tools/snapshots/forge_services__tools__shell__tests__shell_multiline_output_integration.snap
---
source: crates/forge_services/src/tools/shell.rs
expression: "&result.into_string()"
---
---
command: echo -e 'line1\nline2\nline3'
exit_code: 0
---
<stdout>
-e 'line1\nline2\nline3
</stdout>
